# sound-and-complete

./: .ghci  .hlint.yaml  CHANGELOG.md  README.md  nixpkgs.json  package.yaml.old  setup-ghcmod.sh  shell.nix  sound-and-complete.cabal  stack.yaml
src/: Eval.hs  Infer.hs  Main.hs  Main.lhs  Main.md  Overture.hs  Pretty.hs  Tests.hs  Types.hs
src/SoundAndComplete/: Infer.hs  Infer.lhs  Infer.md  Pretty.hs  Types.hs
