name:           sound-and-complete
version:        0.0.0.1
synopsis:       An implementation of the Dunfield-Krishnaswami "Sound and Complete" type-system
description:    See README at <https://github.com/sol/hpack#readme>
category:       Language
homepage:       https://github.com/mrkgnao/sound-and-complete
bug-reports:    https://github.com/mrkgnao/sound-and-complete/issues
maintainer:     Soham Chowdhury <chow.soham@gmail.com>
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/mrkgnao/sound-and-complete

executable repl
  main-is: Main.hs
  other-modules:
      Infer
      Types
      Pretty
      Overture
  hs-source-dirs:
      src
  build-depends:
      base >= 4.10
    , mtl
    , transformers
    , safe
    , lens
    , prettyprinter
    , prettyprinter-ansi-terminal
    , hspec
    , containers
    , adjunctions
    , profunctors
    , text
    , bytestring
    , hashable
    , unordered-containers
    , exceptions
    , uniplate
  default-language: Haskell2010
